syntax = "proto3";
package pubsub.v1;

import "pubsub/v1/pubsub.proto";

option go_package = "github.com/peggyjv/sommelier/v4/x/pubsub/types";

service Msg {
    rpc RemovePublisher (MsgRemovePublisherRequest) returns (MsgRemovePublisherResponse);
    rpc AddSubscriber (MsgAddSubscriberRequest) returns (MsgAddSubscriberResponse);
    rpc RemoveSubscriber (MsgRemoveSubscriberRequest) returns (MsgRemoveSubscriberResponse);
    rpc AddPublisherIntent (MsgAddPublisherIntentRequest) returns (MsgAddPublisherIntentResponse);
    rpc RemovePublisherIntent (MsgRemovePublisherIntentRequest) returns (MsgRemovePublisherIntentResponse);
    rpc AddSubscriberIntent (MsgAddSubscriberIntentRequest) returns (MsgAddSubscriberIntentResponse);
    rpc RemoveSubscriberIntent (MsgRemoveSubscriberIntentRequest) returns (MsgRemoveSubscriberIntentResponse);
}

message MsgRemovePublisherRequest {
  string publisher_domain = 1;
  string signer = 2;
}

message MsgRemovePublisherResponse {}

message MsgAddSubscriberRequest {
  Subscriber subscriber = 1;
  string signer = 2;
}

message MsgAddSubscriberResponse {}

message MsgRemoveSubscriberRequest {
  string subscriber_address = 1;
  string signer = 2;
}

message MsgRemoveSubscriberResponse {}

message MsgAddPublisherIntentRequest {
  PublisherIntent publisher_intent = 1;
  string signer = 2;
}

message MsgAddPublisherIntentResponse {}

message MsgRemovePublisherIntentRequest {
  string subscription_id = 1;
  string publisher_domain = 2;
  string signer = 3;
}

message MsgRemovePublisherIntentResponse {}

message MsgAddSubscriberIntentRequest {
  SubscriberIntent subscriber_intent = 1;
  string signer = 2;
}

message MsgAddSubscriberIntentResponse {}

message MsgRemoveSubscriberIntentRequest {
  string subscription_id = 1;
  string subscriber_address = 2;
  string signer = 3;
}

message MsgRemoveSubscriberIntentResponse {}
